--- a/angular-web-app/src/app/components/_admin/page-news/page-news.component.html
+++ b/angular-web-app/src/app/components/_admin/page-news/page-news.component.html
@@ -5,7 +5,7 @@
   <!-- Page preview -->
   <!-- <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div class="d-flex flex-column scroll-content-wrapper" style="height: 500px; padding-bottom: 20px;">
           <ngx-simplebar class="d-flex flex-column scroll-content">
