--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0" *ngIf="content && generalContent">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="content.active">
           <app-section-title [title]="content.title" [subTitle]="content.subTitle" [text]="content.text">
@@ -29,7 +29,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <form (ngSubmit)="onSubmit()" #contactFormForm="ngForm">
 
           <div class="form-group row">
