--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0" *ngIf="featured && generalContent">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="featured.active">
           <div class="container-fluid">
@@ -29,7 +29,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <form (ngSubmit)="onSubmit()" #featuredForm="ngForm">
           <div class="form-group row">
             <div class="col-sm-12 col-md-10 d-flex align-items-center">
