--- a/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-gallery/comp-gallery.component.html
@@ -1,75 +1,75 @@
 <div class="container-fluid p-0" *ngIf="galleryContent && generalContent">
-    <div class="row mb-4">
-        <div class="col-12">
-            <mat-card class="mat-elevation-z8">
-                <h4 class="title-underlined">Resultaat</h4>
-                <div class="container-fluid">
-                    <app-section-title [title]="galleryContent.title" [subTitle]="galleryContent.subTitle" [text]="galleryContent.text">
-                    </app-section-title>
-                </div>
-            </mat-card>
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-card class="{{generalContent.cardElevation}}">
+        <h4 class="title-underlined">Resultaat</h4>
+        <div class="container-fluid">
+          <app-section-title [title]="galleryContent.title" [subTitle]="galleryContent.subTitle"
+            [text]="galleryContent.text">
+          </app-section-title>
         </div>
+      </mat-card>
     </div>
+  </div>
 
-    <div class="row mb-4">
-        <div class="col-12">
-            <mat-card class="mat-elevation-z8">
-                <form (ngSubmit)="onSubmit()" #galleryContentForm="ngForm">
+  <div class="row mb-4">
+    <div class="col-12">
+      <mat-card class="{{generalContent.cardElevation}}">
+        <form (ngSubmit)="onSubmit()" #galleryContentForm="ngForm">
 
-                    <div class="form-group row">
-                        <div class="col-12 d-flex align-items-center">
-                            <h4 class="title-underlined">Instellingen</h4>
-                        </div>
-                    </div>
+          <div class="form-group row">
+            <div class="col-12 d-flex align-items-center">
+              <h4 class="title-underlined">Instellingen</h4>
+            </div>
+          </div>
 
-                    <div class="form-group row">
-                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                            class="form-field col-sm-12 col-md-6">
-                            <mat-label>Content titel</mat-label>
-                            <input matInput type="text" id="galleryContentTitle" placeholder="Titel"
-                                name="galleryContentTitle" [(ngModel)]="galleryContent.title"
-                                #galleryContentTitleInput="ngModel" required>
-                            <mat-error [hidden]="galleryContentTitleInput.valid || galleryContentTitleInput.pristine">
-                                Titel is verplicht
-                            </mat-error>
-                        </mat-form-field>
+          <div class="form-group row">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
+              <mat-label>Content titel</mat-label>
+              <input matInput type="text" id="galleryContentTitle" placeholder="Titel" name="galleryContentTitle"
+                [(ngModel)]="galleryContent.title" #galleryContentTitleInput="ngModel" required>
+              <mat-error [hidden]="galleryContentTitleInput.valid || galleryContentTitleInput.pristine">
+                Titel is verplicht
+              </mat-error>
+            </mat-form-field>
 
-                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
-                            class="form-field col-sm-12 col-md-6">
-                            <mat-label>Content subtitel</mat-label>
-                            <input matInput type="text" id="galleryContentSubTitle" placeholder="Subtitel"
-                                name="galleryContentSubTitle" [(ngModel)]="galleryContent.subTitle"
-                                #galleryContentSubTitleInput="ngModel" required>
-                            <mat-error
-                                [hidden]="galleryContentSubTitleInput.valid || galleryContentSubTitleInput.pristine">
-                                Subtitel is verplicht
-                            </mat-error>
-                        </mat-form-field>
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
+              <mat-label>Content subtitel</mat-label>
+              <input matInput type="text" id="galleryContentSubTitle" placeholder="Subtitel"
+                name="galleryContentSubTitle" [(ngModel)]="galleryContent.subTitle"
+                #galleryContentSubTitleInput="ngModel" required>
+              <mat-error [hidden]="galleryContentSubTitleInput.valid || galleryContentSubTitleInput.pristine">
+                Subtitel is verplicht
+              </mat-error>
+            </mat-form-field>
 
-                        <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
-                            <mat-label>Content text</mat-label>
-                            <textarea rows="1" matInput type="text" id="galleryContentText" placeholder="Text"
-                                name="galleryContentText" [(ngModel)]="galleryContent.text"
-                                #galleryContentTextInput="ngModel" required> </textarea>
-                            <mat-error [hidden]="galleryContentTextInput.valid || galleryContentTextInput.pristine">
-                                Text is verplicht
-                            </mat-error>
-                        </mat-form-field>
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12">
+              <mat-label>Content text</mat-label>
+              <textarea rows="1" matInput type="text" id="galleryContentText" placeholder="Text"
+                name="galleryContentText" [(ngModel)]="galleryContent.text" #galleryContentTextInput="ngModel"
+                required> </textarea>
+              <mat-error [hidden]="galleryContentTextInput.valid || galleryContentTextInput.pristine">
+                Text is verplicht
+              </mat-error>
+            </mat-form-field>
 
-                    </div>
+          </div>
 
 
-                    <button mat-flat-button color="accent" type="submit"
-                        [disabled]="!galleryContentForm.form.valid || galleryContentForm.form.pristine">
-                        Opslaan
-                    </button>
-                    <button mat-flat-button color="primary" type="button" class="ml-3"
-                        [disabled]="galleryContentForm.form.pristine" (click)="resetForm()">
-                        Reset
-                    </button>
-                </form>
-            </mat-card>
-        </div>
+          <button mat-flat-button color="accent" type="submit"
+            [disabled]="!galleryContentForm.form.valid || galleryContentForm.form.pristine">
+            Opslaan
+          </button>
+          <button mat-flat-button color="primary" type="button" class="ml-3"
+            [disabled]="galleryContentForm.form.pristine" (click)="resetForm()">
+            Reset
+          </button>
+        </form>
+      </mat-card>
     </div>
+  </div>
 
 </div>
