--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0" *ngIf="latestWork && generalContent">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="latestWork.active" class="container-fluid">
           <app-section-title [title]="latestWork.title" [subTitle]="latestWork.subTitle" [text]="latestWork.text"
@@ -25,7 +25,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
 
         <form (ngSubmit)="onSubmit()" #latestWorkForm="ngForm">
           <div class="form-group row">
@@ -43,7 +43,8 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="latestWorkContentTitle" placeholder="Titel" name="latestWorkContentTitle"
                 [(ngModel)]="latestWork.title" #latestWorkContentTitleInput="ngModel" required>
@@ -51,7 +52,8 @@
                 Titel is verplicht</mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="latestWorkContentSubTitle" placeholder="Subtitel"
                 name="latestWorkContentSubTitle" [(ngModel)]="latestWork.subTitle"
@@ -61,7 +63,8 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-10">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-10">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="latestWorkContentText" placeholder="Text"
                 name="latestWorkContentText" [(ngModel)]="latestWork.text" #latestWorkContentTextInput="ngModel"
@@ -71,7 +74,8 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-2">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-2">
               <mat-label>Items</mat-label>
               <input matInput type="number" id="latestWorkContentAmount" name="latestWorkContentAmount" min="1" max="6"
                 [(ngModel)]="latestWork.amount" #latestWorkContentAmountInput="ngModel" required>
