--- a/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-services/comp-services.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-0" *ngIf="services && generalContent">
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <div *ngIf="services.active">
           <app-section-title [title]="services.title" [subTitle]="services.subTitle" [text]="services.text">
@@ -24,7 +24,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <form (ngSubmit)="onSubmit()" #servicesForm="ngForm">
 
           <div class="form-group row">
@@ -42,7 +42,8 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Content titel</mat-label>
               <input matInput type="text" id="servicesContentTitle" placeholder="Titel" name="servicesContentTitle"
                 [(ngModel)]="services.title" #servicesContentTitleInput="ngModel" required>
@@ -51,7 +52,8 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Content subtitel</mat-label>
               <input matInput type="text" id="servicesContentSubTitle" placeholder="Subtitel"
                 name="servicesContentSubTitle" [(ngModel)]="services.subTitle" #servicesContentSubTitleInput="ngModel"
@@ -61,7 +63,8 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12">
               <mat-label>Content text</mat-label>
               <textarea rows="1" matInput type="text" id="servicesContentText" placeholder="Text"
                 name="servicesContentText" [(ngModel)]="services.text" #servicesContentTextInput="ngModel"
@@ -74,7 +77,8 @@
 
           <div class="form-group row">
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard0Title" placeholder="Titel" name="servicesCard0Title"
                   [(ngModel)]="services.services[0].title" #servicesCard0TitleInput="ngModel" required>
@@ -83,7 +87,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card0Icon" placeholder="Icon" name="card0Icon"
                   [(ngModel)]="services.services[0].icon" #card0IconInput="ngModel" required>
@@ -92,7 +97,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard0Text" placeholder="Text" name="servicesCard0Text"
                   [(ngModel)]="services.services[0].description">
@@ -100,7 +106,8 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard1Title" placeholder="Titel" name="servicesCard1Title"
                   [(ngModel)]="services.services[1].title" #servicesCard1TitleInput="ngModel" required>
@@ -109,7 +116,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card1Icon" placeholder="Icon" name="card1Icon"
                   [(ngModel)]="services.services[1].icon" #card1IconInput="ngModel" required>
@@ -118,7 +126,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard1Text" placeholder="Text" name="servicesCard1Text"
                   [(ngModel)]="services.services[1].description">
@@ -126,7 +135,8 @@
             </div>
 
             <div class="col-xs-12 col-sm-6 col-md-4">
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card titel</mat-label>
                 <input matInput type="text" id="servicesCard2Title" placeholder="Titel" name="servicesCard2Title"
                   [(ngModel)]="services.services[2].title" #servicesCard2TitleInput="ngModel" required>
@@ -135,7 +145,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card icon</mat-label>
                 <input matInput type="text" id="card2Icon" placeholder="Icon" name="card2Icon"
                   [(ngModel)]="services.services[2].icon" #card2IconInput="ngModel" required>
@@ -144,7 +155,8 @@
                 </mat-error>
               </mat-form-field>
 
-              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field w-100">
+              <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+                class="form-field w-100">
                 <mat-label>Card tekst</mat-label>
                 <input matInput type="text" id="servicesCard2Text" placeholder="Text" name="servicesCard2Text"
                   [(ngModel)]="services.services[2].description">
