--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -4,7 +4,7 @@
 
   <div class="row mb-4">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Resultaat</h4>
         <app-header [small]="headerContent.small" [typing]="headerContent.typing" [paralax]="headerContent.paralax"
           [title]="headerContent.defaultTitle" [subTitle]="headerContent.defaultSubtitle"
@@ -16,12 +16,13 @@
 
   <div class="row mb-5">
     <div class="col-12">
-      <mat-card class="mat-elevation-z8">
+      <mat-card class="{{generalContent.cardElevation}}">
         <h4 class="title-underlined">Instellingen</h4>
         <form (ngSubmit)="onSubmit()" #headerForm="ngForm">
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Standaard titel</mat-label>
               <input matInput type="text" id="defaultTitle" placeholder="Titel" name="defaultTitle"
                 [(ngModel)]="headerContent.defaultTitle" #defaultTitle="ngModel" required>
@@ -29,7 +30,8 @@
                 Titel is verplicht
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12 col-md-6">
               <mat-label>Standaard subtitel</mat-label>
               <input matInput type="text" id="defaultSubTitle" placeholder="Subtitel" name="defaultSubTitle"
                 [(ngModel)]="headerContent.defaultSubtitle" #defaultSubTitle="ngModel" required>
@@ -40,7 +42,8 @@
           </div>
 
           <div class="form-group row" *ngIf="fileUploads">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-sm-12">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-sm-12">
               <mat-label>Standaard afbeelding</mat-label>
               <mat-select id="defaultImage" name="defaultImage" [(ngModel)]="headerContent.defaultImage"
                 #defaultImage="ngModel" required>
