--- a/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
+++ b/angular-web-app/src/app/components/_admin/manager-files/manager-files.component.html
@@ -22,7 +22,7 @@
       </mat-form-field>
 
       <!-- Elevation -->
-      <div class="mat-elevation-z8">
+      <div class="{{generalContent.cardElevation}}">
         <!-- Table -->
         <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
