--- a/angular-web-app/src/app/components/_admin/news-edit/news-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/news-edit/news-edit.component.html
@@ -6,7 +6,7 @@
     <div class="col-12">
 
       <form *ngIf="newsItem" (ngSubmit)="onSubmit()" #editNewsItemForm="ngForm">
-        <mat-card class="mat-elevation-z8 mb-4">
+        <mat-card class="{{generalContent.cardElevation}} mb-4">
           <h4 class="title-underlined">Afbeelding</h4>
 
           <div class="form-group row">
@@ -29,7 +29,7 @@
         </mat-card>
 
         <!-- General information -->
-        <mat-card class="mat-elevation-z8 mb-4">
+        <mat-card class="{{generalContent.cardElevation}} mb-4">
           <h4 class="title-underlined">Details</h4>
 
           <div class="form-group row">
