--- a/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/news-overview/news-overview.component.html
@@ -23,7 +23,7 @@
       </mat-form-field>
 
       <!-- Elevation -->
-      <div class="mat-elevation-z8">
+      <div class="{{generalContent.cardElevation}}">
         <!-- Table -->
         <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
@@ -93,7 +93,8 @@
         </div>
 
         <!-- Paginator -->
-        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons>
+        </mat-paginator>
 
       </div>
 
@@ -103,14 +104,14 @@
 
 
 <!-- Modal -->
-<ng-template #modalContent>
+<ng-template #modalContent *ngIf="generalContent">
 
   <mat-dialog-content>
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-3">
           <div class="news-header">
-            <img class="w-100 rounded mat-elevation-z8" [src]="modalItem.image" alt="news" />
+            <img class="w-100 rounded {{ generalContent.cardElevation }}" [src]="modalItem.image" alt="news" />
           </div>
         </div>
         <div class="col-md-9">
