--- a/angular-web-app/src/app/components/_admin/painting-edit/painting-edit.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-edit/painting-edit.component.html
@@ -7,7 +7,7 @@
 
       <form *ngIf="painting" (ngSubmit)="onSubmit()" #editPaintingForm="ngForm">
 
-        <mat-card class="mat-elevation-z8 mb-4">
+        <mat-card class="{{generalContent.cardElevation}} mb-4">
           <h4 class="title-underlined">Afbeeldingen</h4>
 
           <div class="form-group row">
@@ -39,11 +39,12 @@
         </mat-card>
 
         <!-- General information -->
-        <mat-card class="mat-elevation-z8 mb-4">
+        <mat-card class="{{generalContent.cardElevation}} mb-4">
           <h4 class="title-underlined">Details</h4>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Titel</mat-label>
               <input matInput id="title" placeholder="Titel" name="title" [(ngModel)]="painting.title"
                 [disabled]="formDisabled" #title="ngModel" required />
@@ -51,7 +52,8 @@
                 Titel is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Kunstenaar</mat-label>
               <input matInput id="artist" placeholder="Kunstenaar" name="artist" [(ngModel)]="painting.artist"
                 [disabled]="formDisabled" #artist="ngModel" required />
@@ -62,7 +64,8 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Verf</mat-label>
               <mat-select id="paint" name="paint" [(ngModel)]="painting.paint" [disabled]="formDisabled"
                 #paint="ngModel" required>
@@ -74,7 +77,8 @@
                 Verf is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Materiaal</mat-label>
               <mat-select id="material" name="material" [(ngModel)]="painting.material" [disabled]="formDisabled"
                 #material="ngModel" required>
@@ -89,7 +93,8 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Categorie</mat-label>
               <mat-select id="category" name="category" [(ngModel)]="painting.category" [disabled]="formDisabled"
                 #category="ngModel" required>
@@ -101,7 +106,8 @@
                 Categorie is <strong>verplicht</strong>
               </mat-error>
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Status</mat-label>
               <mat-select id="state" name="state" [(ngModel)]="painting.status" [disabled]="formDisabled"
                 #state="ngModel" required>
@@ -116,17 +122,20 @@
           </div>
 
           <div class="form-group row">
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-6">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-6">
               <mat-label>Prijs</mat-label>
               <input matInput id="price" placeholder="Prijs" name="price" [(ngModel)]="painting.price"
                 [disabled]="formDisabled" #price="ngModel" />
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-3">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-3">
               <mat-label>Lengte</mat-label>
               <input matInput id="length" placeholder="Lengte" name="length" [(ngModel)]="painting.length"
                 [disabled]="formDisabled" #length="ngModel" />
             </mat-form-field>
-            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor" class="form-field col-12 col-md-3">
+            <mat-form-field [appearance]="generalContent.formStyle" [color]="generalContent.formColor"
+              class="form-field col-12 col-md-3">
               <mat-label>Breedte</mat-label>
               <input matInput id="width" placeholder="Breedte" name="width" [(ngModel)]="painting.width"
                 [disabled]="formDisabled" #width="ngModel" />
@@ -137,7 +146,8 @@
             <div class="col-12">
               <div class="NgxEditor__Wrapper">
                 <ngx-editor-menu [editor]="editor"> </ngx-editor-menu>
-                <ngx-editor [editor]="editor" [ngModel]="editorOutput" [placeholder]="'Omschrijving...'" name="editorOutput" (ngModelChange)="onEditorContentChange($event)">
+                <ngx-editor [editor]="editor" [ngModel]="editorOutput" [placeholder]="'Omschrijving...'"
+                  name="editorOutput" (ngModelChange)="onEditorContentChange($event)">
                 </ngx-editor>
               </div>
             </div>
@@ -163,7 +173,7 @@
   <div *swalPortal class="row mt-3" #thumbnailOptions>
     <div *ngFor="let url of painting.images" class="col-12 col-md-4">
       <div class="img-thumbnail-option">
-        <img [src]="url" (click)="setThumbnail($event, url)" class="img-thumbnail mat-elevation-z8">
+        <img [src]="url" (click)="setThumbnail($event, url)" class="img-thumbnail {{generalContent.cardElevation}}">
         <div class="img-thumbnail-option-overlay">
           <mat-icon>check_cricle_outline</mat-icon>
         </div>
