--- a/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
+++ b/angular-web-app/src/app/components/_admin/painting-overview/painting-overview.component.html
@@ -24,7 +24,7 @@
       </mat-form-field>
 
       <!-- Elevation -->
-      <div class="mat-elevation-z8">
+      <div class="{{generalContent.cardElevation}}">
         <!-- Table -->
         <div class="table-responsive">
           <table mat-table [dataSource]="dataSource" class="w-100" matSort matSortActive="created"
@@ -32,7 +32,8 @@
             <ng-container matColumnDef="thumbnail" sticky>
               <th mat-header-cell *matHeaderCellDef> Afbeelding </th>
               <td mat-cell *matCellDef="let painting">
-                <img *ngIf="painting.thumbnail" [src]="painting.thumbnail" alt="{{ painting.title }}" class="rounded img-table mat-elevation-z2">
+                <img *ngIf="painting.thumbnail" [src]="painting.thumbnail" alt="{{ painting.title }}"
+                  class="rounded img-table mat-elevation-z2">
               </td>
             </ng-container>
 
@@ -59,7 +60,8 @@
             <ng-container matColumnDef="active">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Actief </th>
               <td mat-cell *matCellDef="let painting">
-                <mat-slide-toggle [checked]="painting.active" (change)="setActiveState(painting , $event)"></mat-slide-toggle>
+                <mat-slide-toggle [checked]="painting.active" (change)="setActiveState(painting , $event)">
+                </mat-slide-toggle>
               </td>
             </ng-container>
 
@@ -90,7 +92,8 @@
         </div>
 
         <!-- Paginator -->
-        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons></mat-paginator>
+        <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 25, 50]" showFirstLastButtons>
+        </mat-paginator>
 
       </div>
 
