--- a/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-contact-form/comp-contact-form.component.html
@@ -13,7 +13,7 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <app-contact-card [appearance]="content.formStyle" [color]="content.formColor"></app-contact-card>
+              <app-contact-card [generalContent]="generalContent"></app-contact-card>
             </div>
           </div>
         </div>
