--- a/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-news/comp-latest-news.component.html
@@ -9,7 +9,7 @@
           </app-section-title>
           <div class="row">
             <div class="col-12">
-              <app-latest-news [amount]="latestNews.amount"></app-latest-news>
+              <app-latest-news [amount]="latestNews.amount" [generalContent]="generalContent"></app-latest-news>
             </div>
           </div>
         </div>
