--- a/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-latest-work/comp-latest-work.component.html
@@ -9,7 +9,7 @@
           </app-section-title>
           <div class="row">
             <div class="col-12">
-              <app-latest [amount]="latestWork.amount"></app-latest>
+              <app-latest [amount]="latestWork.amount" [generalContent]="generalContent"></app-latest>
             </div>
           </div>
         </div>
