--- a/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
+++ b/angular-web-app/src/app/components/_admin/layout-header/layout-header.component.html
@@ -8,7 +8,7 @@
         <h4 class="title-underlined">Resultaat</h4>
         <app-header [small]="headerContent.small" [typing]="headerContent.typing" [paralax]="headerContent.paralax"
           [title]="headerContent.defaultTitle" [subTitle]="headerContent.defaultSubtitle"
-          [image]="headerContent.defaultImage">
+          [image]="headerContent.defaultImage" [elevation]="generalContent.cardElevation">
         </app-header>
       </mat-card>
     </div>
