--- a/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
+++ b/angular-web-app/src/app/components/_admin/comp-features/comp-features.component.html
@@ -11,7 +11,7 @@
           <div class="container-fluid">
             <div class="row">
               <div class="col-12">
-                <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight">
+                <app-painting-card [painting]="featured.painting" [maxHeight]="featured.maxHeight" [elevation]="generalContent.cardElevation">
                 </app-painting-card>
               </div>
             </div>
