--- a/angular-web-app/src/app/components/_admin/general/general.component.html
+++ b/angular-web-app/src/app/components/_admin/general/general.component.html
@@ -2,7 +2,7 @@
   <app-section-title [title]="title" [subTitle]="subTitle" [text]="text" [admin]="true">
   </app-section-title>
 
-  <div class="row mb-4">
+  <div class="row mb-4" *ngIf="content">
     <div class="col-12">
       <mat-card class="{{content.cardElevation}}">
         <form (ngSubmit)="onSubmit()" #generalContentForm="ngForm" *ngIf="content">
